# autism-detection

./: .gitignore  PROJECT_SUMMARY.md  README.md  index.html  main.py  pyproject.toml  requirements.txt
model_artifacts/: autism_detection_model.pth  classification_report.txt  model_info.txt
src/: train_model.py
src/api/: prediction_api.py  test_client.py
src/data/: data_analysis.py
src/models/: autism_model.py
